--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
+    "lucide-react": "^0.471.1",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
